Added dataframe version of spark