@@ -59,7 +59,12 @@ tasks.named('run') {
     doFirst {
         jvmArgs = [
                 '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                '--add-exports', 'java.base/sun.security.action=ALL-UNNAMED'
+                '--add-exports', 'java.base/sun.security.action=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED'
         ]
     }
 }
